--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container mt-5">
     <div class="text-end mb-3">
       <button class="btn btn-warning" (click)="checkout()">Checkout</button>
