--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,9 +14,9 @@
           <a class="nav-link" href="/cart">Cart</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">My Orders</a>
+            <a class="nav-link" href="/order">My Orders</a>
           </li>
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
            aria-haspopup="true" aria-expanded="false">
             Products
@@ -25,7 +25,7 @@
             <a class="dropdown-item" href="#">Mobile</a>
             <a class="dropdown-item" href="#">Headphone</a>
           </div>
-        </li>
+        </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
